--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Valentine's Day, Neelam!</title>
+  <title>Hello</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,10 +19,10 @@
 
     <!-- Main content -->
     <header>
-      <h1>Happy Valentine's Day, Neelam! ❤️</h1>
+      <h1>Hello🥸</h1>
     </header>
     <main>
-      <button id="showMessage">Click Me!</button>
+      <button id="showMessage">Touch Me!</button>
       <div id="message" class="hidden">
         <p>Hey love,</p>
         <p>Never stop smiling, embracing your creative spark, and being your amazing, crazy self! You light up my world!</p>
