--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello</title>
+  <title>Happy Valentine's Day, Neelam!</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
 
     <!-- Main content -->
     <header>
-      <h1>Hello🥸</h1>
+      <h1>Happy Valentine's Day, Neelam!❤️</h1>
     </header>
     <main>
       <button id="showMessage">Touch Me!</button>
