--- a/index.html
+++ b/index.html
@@ -41,3 +41,10 @@
   <script src="script.js"></script>
 </body>
 </html>
+<audio id="valentineSong" loop>
+  <source src="jaana-samjho-na.mp3" type="audio/mpeg">
+</audio>
+<audio id="valentineSong" loop>
+  <source src="jaana-samjho-na.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
